--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,7 @@ name: Build
 on:
   pull_request:
   push:
+  workflow_dispatch:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ghcr.io/${{ github.repository }}
@@ -22,7 +23,7 @@ jobs:
           command -v brew && brew install bash || true
 
       - uses: DeterminateSystems/nix-installer-action@v15
-        continue-on-error: true # Self-hosted runners already have Nix installed
+        continue-on-error: false # Self-hosted runners already have Nix installed
 
       - name: Install Attic
         run: |
@@ -31,7 +32,7 @@ jobs:
           fi
 
       - name: Configure Attic
-        continue-on-error: true
+        continue-on-error: false
         run: |
           : "${ATTIC_SERVER:=https://staging.attic.rs/}"
           : "${ATTIC_CACHE:=attic-ci}"
